src/objects/BXGO_Parent_Opportunity__c.object
<CustomObject>
    <description>Represents an Opportunity (e.g. a Tender) that consists out of multiple Lots (being represented by Opportunities).</description>
    <fields>
        <fullName>BXFR_Context_Issues__c</fullName>
        <label>Context / Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXFR_Key_Success_Factors__c</fullName>
        <label>Key Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXGO_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BST_Country</valueSetName>
        </valueSet>
    </fields>
    <label>Parent Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>